Refactorización de llamadas a metodos de entrada y salida de productos
